fix(iam): update logic